# ape-solidity

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: commitlint.yaml  publish.yaml  test.yaml
ape_solidity/: __init__.py  _cli.py  _models.py  _pytest.py  _utils.py  compiler.py  exceptions.py  models.py
tests/: ape-config.yaml  conftest.py  package-lock.json  package.json  test_cli.py  test_compiler.py  test_exceptions.py  test_integration.py
tests/BrownieProject/: ape-config.yaml  brownie-config.yaml
tests/BrownieProject/contracts/: BrownieContract.sol
tests/BrownieStyleDependency/contracts/: FailingContract.sol
tests/Dependency/: ape-config.yaml
tests/Dependency/contracts/: Dependency.sol  OlderDependency.sol
tests/DependencyOfDependency/: ape-config.yaml
tests/NonCompilingDependency/contracts/: CompilingContract.sol  NonCompilingContract.sol
tests/NonCompilingDependency/contracts/subdir/: SubCompilingContract.sol
tests/NpmDependency/: ape-config.yaml
tests/NpmDependency/contracts/: UseNpm.sol
tests/ProjectWithinProject/: ape-config.yaml
tests/ProjectWithinProject/contracts/: Contract.sol
tests/VersionSpecifiedInConfig/: ape-config.yaml
tests/VersionSpecifiedInConfig/contracts/: VersionSpecifiedInConfig.sol
tests/contracts/: BuiltinErrorChecker.sol  CircularImport1.sol  CircularImport2.sol  CompilesOnce.sol  ContractUsingLibraryNotInSameSource.sol  DifferentNameThanFile.sol  HasError.sol  ImportConstrainingVersion.sol  ImportOlderDependency.sol  ImportSourceWithEqualSignVersion.sol  ImportSourceWithNoPrefixVersion.sol  Imports.sol  IndirectlyImportingMoreConstrainedVersion.sol  IndirectlyImportingMoreConstrainedVersionCompanion.sol  IndirectlyImportingMoreConstrainedVersionCompanionImport.sol  JustAStruct.sol  LibraryFun.sol  MultipleDefinitions.sol  OlderVersion.sol  RandomVyperFile.vy  RangedVersion.sol  Solcontract.sol  Solcontract_2.sol  Source.extra.ext.sol  SpacesInPragma.sol  SpecificVersion.sol  SpecificVersionNoPrefix.sol  SpecificVersionNoPrefix2.sol  SpecificVersionRange.sol  SpecificVersionWithEqualSign.sol  UseYearn.sol  VagueVersion.sol  solcontract.sol  solcontract_2.sol
tests/contracts/DirectoryWithExtension.sol/: README.md
tests/contracts/safe/: README.md  ThisIsNotGnosisSafe.sol
tests/contracts/subfolder/: UsingDependencyWithinSubFolder.sol
tests/data/: ImportingLessConstrainedVersionFlat.sol  ImportsFlattened.sol  ImportsFlattened.sol.txt
tests/data/projects/BrownieProject/contracts/: BrownieContract.sol
tests/data/projects/Dependency/: ape-config.yaml
tests/data/projects/Dependency/contracts/subfolder/: InDependencySubfolder.sol
tests/data/projects/Dependency/contracts/subfolder_with_imports/: InDependencySubfolderWithImports.sol
tests/data/projects/Project/contracts/: CircularImport1.sol  CompilesOnce.sol  ExperimentalABIEncoderV2.sol  ImportSourceWithEqualSignVersion.sol  ImportingLessConstrainedVersion.sol  Imports.sol  IndirectlyImportingMoreConstrainedVersion.sol  MissingPragma.sol  NumerousDefinitions.sol  RangedVersion.sol  SpacesInPragma.sol  SpecificVersionNoPrefix2.sol
tests/data/projects/Project/contracts/subfolder/: Relativecontract.sol
tests/data/projects/SpecifiedCompilerVersion/: ape-config.yaml
tests/data/projects/SpecifiedCompilerVersion/contracts/: IVersionAffectedByBreakingChange.sol  VersionAffectedByBreakingChange.sol
tests/dependency/: ape-config.yaml
tests/dependency/contracts/: Dependency.sol
tests/dependency_of_dependency/contracts/: DependencyOfDependency.sol
tests/project/: ape-config.yaml
tests/scripts/: clean.py
tests/soltests/: basic.t.sol  withSetUp.t.sol
