[build-system]
requires = ["setuptools>=75.6.0", "wheel", "setuptools_scm[toml]>=5.0"]

[tool.mypy]
exclude = "build/"
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.setuptools_scm]
write_to = "ape_solidity/version.py"

[tool.pytest.ini_options]
addopts = """
    -p no:ape_test
    --cov-branch
    --cov-report term
    --cov-report html
    --cov-report xml
    --cov=ape_solidity
"""
python_files = "test_*.py"
testpaths = "tests"
markers = """
fuzzing: Run Hypothesis fuzz test suite
install: Tests that will install a solc version (slow)
"""

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["ape_solidity"]

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"
indent-style = "space"
docstring-code-format = true

[tool.mdformat]
number = true
